--- a/linking/contact.css
+++ b/linking/contact.css
@@ -1,6 +1,6 @@
-body{
+/* body{
     background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
-}
+} */
 .contact-form{
     background: #fff;
     margin-top: 10%;
@@ -10,14 +10,14 @@ body{
 .contact-form .form-control{
     border-radius:1rem;
 }
-.contact-image{
+/* .contact-image{
     text-align: center;
 }
 .contact-image img{
     border-radius: 6rem;
     width: 11%;
     margin-top: -3%;
-    transform: rotate(29deg);
+    transform: rotate(29deg); */
 }
 .contact-form form{
     padding: 14%;
@@ -50,4 +50,7 @@ body{
     background-color: #0062cc;
     border: none;
     cursor: pointer;
+}
+nav{
+    background-color: #778899;
 }
