--- a/linking/style.css
+++ b/linking/style.css
@@ -14,6 +14,15 @@ li.name{
     text-align: center;
     font-size: large;
 }
+
+footer {
+    padding-top: 3px; 
+    position: absolute;
+    height: 20px;
+    margin-bottom: 0;
+    bottom: 0;
+    width: 100%;
+}
 /* div.row div.col-12{
     background-color: pink;
 }
