--- a/linking/contact.css
+++ b/linking/contact.css
@@ -15,6 +15,11 @@ p{
 }
 h2{
     padding: 2%;
+    
+}
+h2 , p{
+    font-family: 'Open Sans Condensed', sans-serif;
+
 }
 input.messagebox{
     height: 75%;
