--- a/linking/style.css
+++ b/linking/style.css
@@ -1,10 +1,16 @@
 
+/* *{
+   font-family: 'Open Sans Condensed', sans-serif;
+} */
 img{
     max-width: 300px;
     max-height: 300px;
 }
 body{
     background-color: gainsboro;
+}
+h1, h2, h3, p{
+    font-family: 'Open Sans Condensed', sans-serif;
 }
 
 nav.item{
@@ -23,9 +29,3 @@ footer {
     bottom: 0;
     width: 100%;
 }
-/* div.row div.col-12{
-    background-color: pink;
-}
-div.row .col-12.col-md-6.col-lg-3.py-1.bg-blue{
-    background-color: blue;
-} */
