--- a/linking/portfolio.css
+++ b/linking/portfolio.css
@@ -1,11 +1,28 @@
+html body{ 
+    background: url(galaxy.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
 
-body{
+/* body{
     background-color: gainsboro;
-}
+} */
+div.container-
 h1{
      font-family: 'Open Sans Condensed', sans-serif;
 }
 img{
     max-width: 150px;
     max-height: 150px;
+}
+footer {
+    padding-top: 3px; 
+    position: absolute;
+    height: 20px;
+    margin-bottom: 0;
+    bottom: 0;
+    width: 100%;
+    color: #ffffff;
 }
