--- a/linking/style.css
+++ b/linking/style.css
@@ -6,9 +6,19 @@ img{
     max-width: 300px;
     max-height: 300px;
 }
-body{
+/* MAKE NOTE OF BELOW */
+html body{
+    background: url(galaxy.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+ 
+div.row{
     background-color: gainsboro;
 }
+
 h1, h2, h3, p{
     font-family: 'Open Sans Condensed', sans-serif;
 }
@@ -28,4 +38,5 @@ footer {
     margin-bottom: 0;
     bottom: 0;
     width: 100%;
+    color: #ffffff;
 }
